--- a/Sunshine_Mindcare_Backend/.htaccess
+++ b/Sunshine_Mindcare_Backend/.htaccess
@@ -9,3 +9,13 @@
     # Main rewrite rule
     RewriteRule ^(.*)$ index.php?/$1 [L,QSA]
 </IfModule>
+# <IfModule mod_rewrite.c>
+#     RewriteEngine On
+#     RewriteBase /
+
+#     RewriteCond %{REQUEST_FILENAME} !-f
+#     RewriteCond %{REQUEST_FILENAME} !-d
+
+#     # Redirect everything to backend
+#     RewriteRule ^(.*)$ /Sunshine-MindCare/Sunshine_Mindcare_Backend/index.php?/$1 [L,QSA]
+# </IfModule>
