--- a/frontend/Sunshine/.env
+++ b/frontend/Sunshine/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL="http://localhost/Sunshine-MindCare/Sunshine_Mindcare_Backend"
+VITE_BACKEND_URL=http://localhost/Sunshine-MindCare/Sunshine_Mindcare_Backend
