--- a/frontend/Sunshine/package.json
+++ b/frontend/Sunshine/package.json
@@ -24,6 +24,8 @@
     "react-router-dom": "^7.9.6",
     "react-toastify": "^11.0.5",
     "recharts": "^3.4.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
