--- a/frontend/Sunshine/package.json
+++ b/frontend/Sunshine/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
